pages_test_commit

--- a/pages_project/templates/base.html
+++ b/pages_project/templates/base.html
@@ -9,8 +9,17 @@
 <body>
 <div id="wrapper">
   <header id="header">
-    <div id="logo"><img src="{% static 'logo.jpg' %}" alt=""/></div>
-    <div id="topbanner"><img src="{% static 'top_banner.png' %}" width="800" height="200" alt=""/></div>    
+    <div id="logo"><img src="{% static 'logo.jpg' %}" alt=""/>
+    <span style="float: right;">
+        {% if user.is_authenticated %}
+          Hello, {{ user.username }}. <a href="{% url 'logout' %}?next=/">Log out</a>.
+        {% else %}
+          Not logged in. <a href="{% url 'login' %}?next=/">Log in</a>.
+        {% endif %}
+    </span>
+    </div>
+    <div id="topbanner"><img src="{% static 'banner.png' %}" width="800" height="200" alt=""/></div> 
+
   </header>
   <aside id="leftsidebar">
     <nav id="nav">
@@ -19,6 +28,8 @@
       <li>Menu 1</li><li>Menu 2</li><li>Menu 3</li>
       {% endblock sidenav %}
       <li><a href="/contact">Contact us</a></li>
+      <li><a href="/quote/">Get a Quote</a></li>
+      <li><a href="/quote/show">Show Quotes</a></li>
     </ul>
     </nav>
   </aside>
